crates/solidity-v2/testing/snapshots/semantic_output/variables/var_tuple_declaration/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Unexpected VarKeyword_Reserved. One of AddressKeyword_Reserved, AssemblyKeyword_Reserved, AtKeyword_Unreserved, Bang, BoolKeyword_Reserved, BreakKeyword_Reserved, BytesKeyword_Reserved, CloseBrace, ContinueKeyword_Reserved, DecimalLiteral, DeleteKeyword_Reserved, DoKeyword_Reserved, DoubleQuotedHexStringLiteral, DoubleQuotedStringLiteral, DoubleQuotedUnicodeStringLiteral, EmitKeyword_Reserved, ErrorKeyword_Unreserved, FalseKeyword_Reserved, FixedKeyword_Reserved, ForKeyword_Reserved, FromKeyword_Unreserved, FunctionKeyword_Reserved, GlobalKeyword_Unreserved, HexLiteral, Identifier, IfKeyword_Reserved, IntKeyword_Reserved, LayoutKeyword_Unreserved, MappingKeyword_Reserved, Minus, MinusMinus, NewKeyword_Reserved, OpenBrace, OpenBracket, OpenParen, PayableKeyword_Reserved, PlusPlus, ReturnKeyword_Reserved, RevertKeyword_Unreserved, SingleQuotedHexStringLiteral, SingleQuotedStringLiteral, SingleQuotedUnicodeStringLiteral, StringKeyword_Reserved, SuperKeyword_Reserved, ThisKeyword_Reserved, Tilde, TransientKeyword_Unreserved, TrueKeyword_Reserved, TryKeyword_Reserved, TypeKeyword_Reserved, UfixedKeyword_Reserved, UintKeyword_Reserved, UncheckedKeyword_Reserved, WhileKeyword_Reserved was expected
   ╭─[input.sol:3:9]
   │
 3 │         var (x, y) = (1, 2);
   │         ─┬─  
   │          ╰─── Error occurred here.
───╯
------------------------------------------------------------------------

Definitions (0):

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):
